--- a/views/_reserva_online_category_form.erb
+++ b/views/_reserva_online_category_form.erb
@@ -10,7 +10,7 @@
 		              <div>
 	                     <div class="collection_place">
 	                       <label for="pickup_place_extended" class="fieldtitle" style="display:inline-block; width:25%"><%=t.new_booking.place%></label>
-	                       <input type="text" name="pickup_place_extended" id="pickup_place_extended" class="readonly-field" readonly="readonly"/>
+	                       <textarea name="pickup_place_extended" id="pickup_place_extended" class="readonly-field" readonly="readonly" rows="3"></textarea>
 	                     </div>
 	                  </div>
 	                  <% end %>	    
@@ -26,7 +26,7 @@
 		              <div >
 	                    <div class="return_place">
 	                      <label for="return_place_extended" class="fieldtitle" style="display:inline-block; width:25%"><%=t.new_booking.place%></label>
-	      	              <input type="text" name="return_place_extended" id="return_place_extended" class="readonly-field" readonly="readonly"/>
+	      	              <textarea name="return_place_extended" id="return_place_extended" class="readonly-field" readonly="readonly" rows="3"></textarea>
                         </div>
                       </div>
 	                  <% end %>	    
