--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -340,7 +340,48 @@
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell right_text"><strong><%%= new Number(entity.extras_cost).toFixed(2) %></strong></td>
-                            </tr>                            
+                            </tr>           
+
+                          <%% if (entity.time_from_cost > 0 ) { %>
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%=t.new_booking.time_from_cost%></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.time_from_cost).toFixed(2) %> </td>
+                          </tr>
+                          <%% } %>
+                          <%% if (entity.time_to_cost > 0 ) { %>          
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%=t.new_booking.time_to_cost%></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>                               
+                            <td class="table-cell right_text"><%%= new Number(entity.time_to_cost).toFixed(2) %> </td>
+                          </tr>
+                          <%% } %>
+
+ 
+                          <%% if (entity.pickup_place_cost > 0 ) { %>          
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%=t.new_booking.pickup_place_cost%></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>                               
+                            <td class="table-cell right_text"><%%= new Number(entity.pickup_place_cost).toFixed(2) %> </td>
+                          </tr>      
+                          <%% } %>
+
+                          <%% if (entity.return_place_cost > 0 ) { %>                 
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%=t.new_booking.return_place_cost%></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>                            
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.return_place_cost).toFixed(2) %> </td>
+                          </tr>                 
+                          <%% } %>   
+
                            <tr class="table-row">
                                <td class="table-cell"><strong class="uppercase_text"><%= t.booking_management.form.total_cost %></strong></td>
                                <td class="table-cell"></td>
